exports[`Shared component Button 1`] = `
<button
  className="a-btn a-btn--default"
  onClick={[Function]}
  role="button"
  type="button">
  cog
</button>
`;

exports[`Shared component Button 2`] = `
<button
  className="a-btn a-btn--default"
  onClick={[Function]}
  role="button"
  type="button">
  cog
</button>
`;

exports[`Shared component SaveButton 1`] = `
<button
  className="a-btn a-btn--primary"
  icon="save"
  onClick={[Function]}
  role="button"
  type="button">
  <span
    className="icon fa fa-save"
    name="save" />
  cog
</button>
`;

exports[`Shared component SaveButton 2`] = `
<button
  className="a-btn a-btn--primary a-btn--loading"
  icon="save"
  onClick={[Function]}
  role="button"
  type="button">
  <span
    className="icon fa fa-spinner fa-spin"
    name="spinner" />
  cog
</button>
`;
